# lynx-compare

./: .gitignore  CHANGELOG.md  README.md  lynx-compare.py  pyproject.toml  requirements.txt
docs/: ABOUT.md  API.md  EXPORT.md  REST_API.md  TESTING.md
lynx_compare/: __init__.py  __main__.py  about.py  api.py  cli.py  display.py  engine.py  export.py  interactive.py  multi.py  plugin.py  server.py
lynx_compare/gui/: app.py
lynx_compare/tui/: app.py
tests/: LynxCompareLibrary.py  test_about.robot  test_api.robot  test_comparison_view.robot  test_engine.robot  test_export.robot  test_export_advanced.robot  test_modules.robot  test_multi.py  test_version.robot  test_warnings.robot
