[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name            = "lynx-compare"
version         = "0.1"
description     = "Lynx Compare — Side-by-side fundamental analysis comparison tool"
requires-python = ">=3.10"
license         = {text = "BSD-3-Clause"}
authors         = [{name = "Borja Tarraso", email = "borja.tarraso@member.fsf.org"}]
dependencies    = [
    "rich>=13.7",
    "textual>=0.50",
]

[tool.setuptools.packages.find]
include = ["lynx_compare*"]
