[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name            = "lynx-compare"
version = "5.3"
description     = "Lynx Compare — Side-by-side fundamental analysis comparison tool"
readme          = "README.md"
requires-python = ">=3.10"
license         = {text = "BSD-3-Clause"}
authors         = [{name = "Borja Tarraso", email = "borja.tarraso@member.fsf.org"}]
keywords        = ["finance", "investing", "compare", "side-by-side"]
classifiers     = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies    = [
    "lynx-investor-core>=5.3",
    "lynx-fa @ file:///home/overdrive/claude/lince-investor/lynx-fa-analysis",
    "rich>=13.7",
    "textual>=0.50",
    "flask>=3.0",
    "argcomplete>=3.0",
]

[project.optional-dependencies]
pdf = ["weasyprint>=60"]
test = ["robotframework>=7.0"]
all = ["weasyprint>=60", "robotframework>=7.0"]

[project.urls]
Homepage   = "https://github.com/borjatarraso/lynx-compare"
Repository = "https://github.com/borjatarraso/lynx-compare"
Issues     = "https://github.com/borjatarraso/lynx-compare/issues"
Changelog  = "https://github.com/borjatarraso/lynx-compare/blob/main/CHANGELOG.md"

[project.scripts]
lynx-compare = "lynx_compare.__main__:main"
lynx-compare-server = "lynx_compare.server:run_server"

[project.entry-points."lynx_investor_suite.agents"]
compare = "lynx_compare.plugin:register"

[tool.setuptools.packages.find]
include = ["lynx_compare*"]

[tool.setuptools.package-data]
lynx_compare = ["img/*.png"]
